Version 0.1625: Mon Mar 30 2015
- Modify the memory leak test to check for <= 0 bytes. I'm not sure how this
  scenario happens, but test failures like this indicate that it can:
  http://www.cpantesters.org/cpan/report/bdd0e36c-d0dd-11e4-954f-5702e0bfc7aa

Version 0.1624: Sun Mar 22 2015
- Moved code to github
- Added POD test
- Improve testability of binmode_bug.t, stdin_tell_bug.t
- Implement a potential fix for test failures where FileHandle::getline()
	seems to be reading a single line even though $/ is undef. Unfortunately I
	can't reproduce this failure, so I'll submit and check the CPAN Testers
	reports.
- Use "local $/" instead of reassigning global $/. Perhaps this is somehow
	related to the test failures above?
- Improve documentation for input_record_separator()

Version 0.1623: Sun Aug 9 2009
- Fixed a bug where files with binary data would sometimes cause an
	unitialized value warning at line 394 as well as incorrect behavior. (Thanks
	to Bill Nugent <whn@lopi.com> for the bug report and initial patch.)
- Removed unused ExtUtils::MakeMaker::bytes, which doesn't exist anymore
	anyway. (Thanks to Slaven Rezić <srezic@cpan.org> for the bug report.)

Version 0.1622: Wed Jul 16 2008
- Updated to the latest version of Module::Install
- Removed auto-install for better compatibility with CPAN and others
- Moved hosting to Google Code

Version 0.1621:
- Improved compatibility with versions of Perl older than 5.6.0, by replacing
  "use bytes" with "use ExtUtils::MakeMaker::bytes". (Thanks to
  <nothingmuch@woobling.org> for the bug report.)
- Fixed test case error reporting for tests that fail to fork. (Thanks to
  <corion-cpansmoker@corion.net> for the test failure report.)
- Fixed unexpected success of binmode_bug.t test on Windows 2000. (Thanks to
  Max Maischein <corion@corion.net> for the bug report.)
- Fixed a bug in stdin_tell_bug.t. (Thanks to Max Maischein
  <corion@corion.net> for the bug report.)

Version 0.1620: Tue Dec 21 2004