@@ -2,6 +2,9 @@ Version 0.1625: Mon Mar 30 2015
 - Modify the memory leak test to check for <= 0 bytes. I'm not sure how this
   scenario happens, but test failures like this indicate that it can:
   http://www.cpantesters.org/cpan/report/bdd0e36c-d0dd-11e4-954f-5702e0bfc7aa
+- Attempt to fix loss of lines when $/ is undef. Thanks to Nigel Horne for the
+  automated testing that found the failure.
+  http://www.cpantesters.org/cpan/report/60452d60-d3cc-11e4-b60b-c2157e3e1735
 
 Version 0.1624: Sun Mar 22 2015
 - Moved code to github
